2020-03-19 Wiley E. Hill <wileyhill@gmail.com>

    * include/geda_gtk_compat.h: Fix Gtk > 2 macros:

          * geda_get_adjustment_page_size
          * geda_get_adjustment_upper
          * geda_get_adjustment_value

      Add macros:

          * geda_set_adjustment_lower
          * geda_set_adjustment_page_size
          * geda_set_adjustment_upper
          * geda_set_adjustment_value

2020-03-18 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_menu.c: Utilize macro:

          * geda_set_widget_allocation
          * geda_get_container_border_width
          * geda_get_widget_style
          * geda_get_widget_window
          * geda_get_widget_requisition

2020-03-13 Wiley E. Hill <wileyhill@gmail.com>

    * include/geda_gtk_compat.h: Replace dynamic cast with static cast
      since Gtk is going to validate the widgets.

    * src/widgets/geda_menu.c: Utilize macro:

          * geda_set_widget_style
          * geda_get_widget_window
          * geda_get_widget_requisition

2020-03-12 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_menu.c: Utilize macro:

          * geda_get_widget_requisition

2020-03-11 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_menu.c: Remove unneeded cast to GedaMenuShell.
      Revise geda_menu_realize to utilize an ancillary GdkWindow pointer,
      use widget pointer and remove dynamic cast. Utilize macro:

          * geda_set_widget_window
          * geda_get_widget_style
          * geda_get_widget_allocation

    * tests/test_menus.c: Replace gtk_main functions; add callback quit().

2020-03-10 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_menu.c: Utilize macros:

          * geda_get_widget_parent
          * geda_get_container_border_width

    * tests/test_file_chooser.c: Revise main to replace gtk_main functions;
      add quit().

2020-03-06 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_check_menu_item.c: Replace GtkToggleAction related